courses/devopswithkubernetes/material-example/app3/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwk-material-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: dwk-app3.localdev.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: images-svc
                port:
                  number: 2345
